--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,5 +22,6 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:21.0.3'
-    compile 'com.squareup.okhttp:okhttp:2.2.0'
+    compile 'com.loopj.android:android-async-http:1.4.5'
+    compile 'io.realm:realm-android:0.77.0'
 }
